--- a/app/src/main/res/layout/download_item_view.xml
+++ b/app/src/main/res/layout/download_item_view.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_margin="2dp"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content">
         <ProgressBar
             android:id="@+id/progressBarOne"
+            android:max="1000"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -14,7 +14,6 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:progressTint="@color/colorPrimaryDark" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,7 +26,6 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
-
                 android:textAlignment="center" />
 
             <Button
